# flight-agent

./: .gitignore  .gitmodules  AGENTS.md  README.md  config.example.yaml  main.py  pyproject.toml
docs/: context-compaction.md
docs/decisions/: ADR-001-non-streaming-cli-agent-invocation.md  ADR-002-state-preserving-context-compaction.md
src/: agent.py  runtime.py
src/air_ticket/: __init__.py  facade.py  flyclaw_adapter.py  flyclaw_repo.py  models.py  normalization.py  providers.py  service.py
src/chat/: __init__.py  runner.py  session.py  trace.py
src/config/: __init__.py  loader.py  schema.py
src/guardrails/: __init__.py  agent_state_compaction.py  context_budget_guard.py  layered_context.py  param_duplicate_tool_guard.py  react_duplicate_tool_guard.py  tool_observation.py
src/mcp/: __init__.py  (+1 more)
tests/: test_agent_wiring.py  test_air_ticket_provider.py  test_air_ticket_service.py  test_air_ticket_tools.py  test_batch_executor_tool.py  test_chat_runner.py  test_config_loader.py  test_context_budget_guard.py  test_context_compaction.py  test_context_pipeline.py  test_flyclaw_repo.py  test_layered_context.py  test_main_reasoning.py  test_memory.py  test_memory_middleware.py  test_observability_config.py  test_observability_events.py  test_observability_logging.py  test_observability_middleware.py  test_param_duplicate_tool_guard.py  test_prompt_builder.py  test_react_duplicate_tool_guard.py  test_runtime.py  test_skill_middleware.py  test_summary_middleware.py  test_tool_observation.py  test_tool_semantic.py  test_tools_registry.py  test_web_ui.py
(+43 files in other folders)
