[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "skypilot-agent"
version = "0.1.0"
description = "A generic LangChain agent demo with registry-based tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai",
    "langgraph",
    "cryptography",
    "pyyaml",
    "requests[socks]",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
